v0.08
	* FIX : work with 0.5 API
	* ADD : move can now work on a complete way
	* ADD : non-transparant proxy support
	* ADD : change cursor when in move mode
	
v0.07 18 aug 2007
	* ADD : nice mappaint mechanism
	* FIX : downloading same area twice doesn't create upload conflicts
	anymore
	* FIX : keep tag content when editing them in the tag table
	* FIX : correctly keep track of the tag table size
	* FIX : remove 0.3 API support
	* ADD : gzipped downloading
	* ADD : nice painting for water
	* ADD : file->new menu option to start a new map
	* FIX : change current directory when opening a file
	* FIX : surpress drawing artefact when creating a new segment
	* FIX : avoid Qt to have to process download notifications recursively
	* ADD : scripts to create the windows installation package
	* ADD : create way from selected segments tool
	* FIX : don't systematically add width tags to segments
	* FIX : streamline changing the width of a segment
	* FIX : bring back drawing of traffic direction indicators
	* FIX : show more segments on greater zoom levels
	* FIX : make user interface work with Qt 4.2 again

v0.06 5 dec 2006 
	* FIX : also recognize true/false for oneway tag
	* FIX : correctly update roads when downloading the same road twice
	* ADD : type combobox to set highway tag
	* FIX : no busy waiting for OSM download
	* ADD : progress dialog while downloading from OSM
	* FIX : refresh view immediatly after download
	* FIX : download segments outside original bounding box for roads
	* FIX : don't call QStatusbar methods from a paintEvent
	* FIX : speed up drawing of roads when zoomed out
	* ADD : undo/redo icons + actions added to toolbar
	* FIX : improve speed with a double buffer for static content
	* ADD : change tags on multiple elements at the same time
	* ADD : delete tag tool
	* ADD : download with 0.4 API
	* ADD : upload with 0.4 API
	* ADD : draw arrows on GPX tracks
	* ADD : optionally download trackpoints from OSM