@@ -3,6 +3,8 @@ v0.08
 	* ADD : move can now work on a complete way
 	* ADD : non-transparant proxy support
 	* ADD : change cursor when in move mode
+	* FIX : recognize 1 in oneway key
+	* FIX : slightly change default way width
 	
 v0.07 18 aug 2007
 	* ADD : nice mappaint mechanism
